# driftwatch

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  install-autostart.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  start.ps1  uninstall-autostart.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: alerts.py  auth.py  config.py  database.py  main.py  models.py  retention.py  scheduler.py  schemas.py
app/engine/: differ.py  prober.py  shape.py
app/routes/: channels.py  demo.py  drift.py  endpoints.py  health.py
static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_differ.py  test_health.py  test_history.py  test_learning.py  test_retention.py  test_retry.py  test_shape.py
